rewrite routes to use not-dingo, updated auth controller to deprecate ldap auth, updated owenit/auditable to current version
